# gswarm-2.4.0

./: .gitignore  CONTRIBUTING.md  README.md  gleam.toml  legacy_posts.json  manifest.toml  mock_gemini.sh  politics_markets.json  release_notes.md  tags.json  tags_full.json
docs/: architecture.md  distributed_guide.md  gap_analysis.md  intelligence_pipeline.md  maintenance_learnings.md  performance_guide.md  roadmap_vnext.md  signal_alpha_report.md
gclaw/: .gitignore  README.md  gclaw.db  gleam.toml  manifest.toml
gswarm/: .gitignore  README.md  gleam.toml  manifest.toml  start_efficient.sh  start_mcp.sh
sly/: ARCHITECTURE.md  Cargo.toml  ROADMAP.md  TASKS.md  TELEGRAM.md  USER_MANUAL.md  WORKFLOW.md
sly/sly-core/: Cargo.toml
sly/sly-core/src/: error.rs  lib.rs  main.rs
sly/sly-core/src/core/: agent.rs  bus.rs  cortex.rs  fs.rs  interpreter.rs  loop.rs  mod.rs  parser.rs  persona.rs  pruner.rs  reflexion.rs  session.rs  state.rs  subprocess.rs  workflow.rs
sly/sly-core/src/io/: adapter.rs  cli.rs  events.rs  haptics.rs  interface.rs  mod.rs  telegram.rs  vision.rs  watcher.rs
sly/sly-core/src/knowledge/: compressor.rs  deduplicator.rs  extractor.rs  mod.rs  scanner.rs
sly/sly-core/src/mcp/: browser.rs  client.rs  cloud.rs  discovery.rs  fetch.rs  local.rs  mod.rs  registry.rs  system.rs  transport.rs  types.rs
sly/sly-core/src/memory/: backend_cozo.rs  backend_gleam.rs  mod.rs  store_graph.rs
sly/sly-core/src/safety/: mod.rs  overlay.rs
sly/sly-core/src/swarm/: cache.rs  context.rs  events.rs  merge.rs  mod.rs  overlay.rs  partition.rs  supervisor.rs  task.rs  worker.rs
sly/tools/monitor/: Cargo.toml
sly/tools/monitor/launchd/: com.brixelectronics.sly.monitor.plist
sly/tools/monitor/src/: main.rs
src/: gleamcms_httpc_ffi.erl  gleamdb.gleam  gleamdb_ets_ffi.erl  (+6 more)
(+697 files in other folders)
