[package]
name = "sly"
version = "1.0.0"
edition = "2021"



[[bin]]
name = "sly"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util", "io-std", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
async-trait = "0.1.89"

# Networking
reqwest = { version = "0.13.1", features = ["json", "native-tls", "stream", "multipart"] }
tokio-tungstenite = "0.26.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
url = "2.5.8"

# Database
cozo = { version = "0.7.6", features = ["storage-rocksdb"] }

# Utilities
walkdir = "2.5.0"
regex = "1.12.2"
colored = "3.1.1"
thiserror = "2.0.12"
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
rayon = "=1.10.0"
dirs = "6.0.0"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
fs_extra = "1.3.0"
similar = "2.7.0"
base64 = "0.22.1"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
tempfile = "3.18.0"

# File Watching (Daemon Mode)
notify = "8.2.0"
fs2 = "0.4.3"
headless_chrome = "1.0.20"
