[package]
name = "sly-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"

colored = "2.0"
chrono = "0.4"
crossterm = "0.27"
tui = { package = "ratatui", version = "0.26" }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
fs2 = "0.4"
